--- a/index.html
+++ b/index.html
@@ -8,10 +8,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="contain">
-        <input type="email" placeholder="Email address" id="email">
-        <button id="but">Get Started</button>
-    </div>
-    
+    <header>
+        <div class="header-wrapper">
+            <div class=""logo>
+                <h2>Netflix</h2>
+            </div>
+            <a href="#" class=""sign-btn>Sign in</a>
+        </div>
+    </header>
+    <section class="hero-section">
+        <div class="content">
+            <div class="hero-text">
+                <h1>Unlimited movies, TV shows, and more.</h1>
+                <p>Watch anywhere. Cancel anytime.</p>
+            </div>
+            <form action="">
+                <div class="form-control">
+                    <label for="email">Ready to watch? Enter your email to create or restart your membership.</label>
+                    <div class="input-control">
+                        <input type="email" placeholder="Email address">
+                        <button type="submit">
+                            <p>Get Started</p>
+                            <i class></i>
+                        </button>
+                    </div>
+                </div>
+                
+            </form>
+        </div>
+    </section>
 </body>
 </html>
