--- a/index.html
+++ b/index.html
@@ -4,38 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Netflix Landing Page</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvHLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+        crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" 
+    />
+    <link rel="icon" href="http://pngimg.com/uploads/netflix/small/netflix_PNG15.png">
+
+
 </head>
 <body>
     <header>
-        <div class="header-wrapper">
-            <div class=""logo>
-                <h2>Netflix</h2>
+        <nav class="nav-wrapper">
+            <div class="logo">
+                <img src="https://www.freepnglogos.com/uploads/netflix-logo-0.png" 
+                alt="Netflix Logo" class="brand__logo">
             </div>
-            <a href="#" class=""sign-btn>Sign in</a>
-        </div>
-    </header>
-    <section class="hero-section">
-        <div class="content">
-            <div class="hero-text">
-                <h1>Unlimited movies, TV shows, and more.</h1>
-                <p>Watch anywhere. Cancel anytime.</p>
-            </div>
-            <form action="">
-                <div class="form-control">
-                    <label for="email">Ready to watch? Enter your email to create or restart your membership.</label>
-                    <div class="input-control">
-                        <input type="email" placeholder="Email address">
-                        <button type="submit">
-                            <p>Get Started</p>
-                            <i class></i>
-                        </button>
+            <div class="nav__nav__items">
+                <div class="nav__item">
+                    <div class="dropdown__container">
+                        <i class="fas fa-globe"></i>
+                        <select name="languages" id="languagesSelect" class="language__drop__down">
+                            <option value="english" selected>English</option>
+                            <option value="hausa">Hausa</option>
+                            <option value="yoruba">Yoruba</option>
+                            <option value="pidgin">Pidgin</option>
+                            <option value="igbo">Igbo</option>        
+                        </select>
                     </div>
                 </div>
-                
-            </form>
-        </div>
-    </section>
+                <div class="nav__item">
+                    <button class="signin__button">Sign in</button>
+                </div>
+            </div>
+        </nav>
+    </header>
+    
 </body>
 </html>
